Fixes scrollbar on noa container

--- a/client/src/screens/NoaContainer.scss
+++ b/client/src/screens/NoaContainer.scss
@@ -1,4 +1,5 @@
 #NoaContainer {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
